# Rusty-Bridge

./: Cargo.toml  Makefile  deploy.sh  rusty-bridge-deploy.yaml
backend/: Cargo.toml  Dockerfile  prepare-sqlx.sh
backend/.sqlx/: query-196a9030f705e877fe5acf4d907b0d7628befc9a4323174514ca773c5126d0c5.json  query-215911aba6b3b69e287625879908ec8e40e7b05cfad8ff928e2e8184dc3bf2ac.json  query-32ae65a9ff5a43779cc9560700def7a7a1312bbeb69f145a6e0d155f9a6d84c8.json  query-395c74ffbe8082e1957df80afbacf88e410562b80cdf9607ab24364dd025695b.json  query-52073e65ee69030b3a1c74cdb1b8e5fa7ccd53d7896443d836cacd9ff09eec6e.json  query-c0c9ceb12176c7e5e9405018870bfc456d6c133b398e47c4d5da16f1ffca7c2e.json  query-fee2b03471c1b42a59af1ea8decf5b67c7ff73dde43a8f002936d3484ec049cc.json
backend/migrations/: 20260314090000_init.sql  20260314090002_init.sql  20260317070000_init.sql
backend/src/: database.rs  main.rs  state.rs
backend/src/api/: mod.rs  restful.rs  websocket.rs
backend/src/dto/: lobby_manager.rs  mod.rs  user_manager.rs
backend/src/game/: bidding.rs  engine.rs  lobby.rs  mod.rs  models.rs  trick.rs
backend/src/helper/: extractor.rs  login.rs  mod.rs
frontend/: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  manifest.json
frontend/public/: sw.js
frontend/public/assets/: style.css
frontend/src/: main.rs
frontend/src/components/: bidding.rs  card.rs  compass.rs  hand.rs  helpers.rs  mod.rs  playing.rs  table.rs
frontend/src/pages/: hub.rs  login.rs  mod.rs  room.rs
shared/: Cargo.toml
shared/src/: lib.rs
tests/: Cargo.toml
tests/src/: main.rs
