[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.21", features = ["v4", "serde"] }
shared = { path = "../shared" }
tower-http = {version = "0.6.8", features = ["cors"]}
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
redis = {version = "1.0", features = ["aio", "tokio-comp"]}
tokio-retry = "0.3"
rand = { version = "0.10", features = [] }
getrandom = { version = "0.4", features = ["wasm_js"] }
rand_chacha = "0.10"
futures-util = "0.3"
tower-cookies = "0.11"