[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Das Web-Framework
leptos = { version = "0.8", features = ["csr"] }
leptos-use = "0.18"
leptos_router = "0.8"
shared = { path = "../shared" }
gloo-net = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlElement", 
    "EventTarget", 
    "Event", 
    "Window", 
    "Document"
] }
serde_json ={ version = "1.0"}
codee = { version = "0.3" }
bytes = "1.0"
serde = "1"
uuid = { version = "1.21", features = ["v4", "serde", "js"] }


reqwest = { version = "0.13", features = ["json"] }