[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.10", features = [] }
getrandom = { version = "0.4", features = ["wasm_js"] }
rand_chacha = "0.10"
# Wir nutzen die brandneue v0.9 (die v0.10 Bestrebungen abdeckt)
#rand = { version = "0.9", features = ["small_rng"] }
#getrandom = "0.3" # Hinweis: 0.4 ist oft noch im Alpha-Status, 0.3 ist das aktuelle Target für Browser